--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li" >
       <h4> New School Classes </h4>
       <img src="Classroom-Management-for-an-Effective-Learning-Environment-scaled.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12" >
-      <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12" >The school has mae classess from 9th to 12th in 2019. There were made till class 8th in 2018.</p>
+      <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12" >The school has made classess from 9th to 12th in 2019. There were made till class 8th in 2018.</p>
      </li>
 
     <li class="list-group-item list-group-item-warning col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li"  >
