--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div id="inter_class_dance_competition" class="collapse">
 
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-            <img src="Dance_Room1_pp.png" height="30%" width="70%" class="img-responsiveimg-thumbnail">
+            <img src="Dance_Room1_pp.png" height="30%" width="70%" class="img-responsive img-thumbnail">
         </div>
 
         <center>
@@ -168,7 +168,7 @@
     <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li" >
       <h4> New School Classes </h4>
       <img src="Classroom-Management-for-an-Effective-Learning-Environment-scaled.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12" >
-      <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12" >The school has made classess from 9th to 12th in 2019. There were made till class 8th in 2018.</p>
+      <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12" >The school has made classess from 9th to 12th in 2019.</p>
      </li>
 
     <li class="list-group-item list-group-item-warning col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li"  >
