--- a/index.html
+++ b/index.html
@@ -181,11 +181,9 @@
                 Sandwich<br><br>
 
                 Veg Cutlets<br><br>
-
-                And also serves juices on paid basis<br><br>
-
-                And much more<br><br>
             </p>
+            
+            <p>And also serves juices on paid basis and much more!</p>
         </li>
 
         <li class="list-group-item list-group-item-warning col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
